# apphub

./: Makefile  README.md  package.json
apps/ai-service/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
apps/ai-service/backup/: Dockerfile  pyproject.toml
apps/web/: Dockerfile
docker/: compose.prod.yaml  compose.yaml  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf
docker/scripts/: dev.sh
docker/traefik/: traefik.yml
